syntax = "proto3";

package ops.v1;

option go_package = "github.com/DavisRayM/integration-helper/proto";

message ListSupportedDeploymentsRequest {}

message ListSupportedDeploymentsResponse {
    repeated string deployment = 1;
}

message GetDeploymentStatusRequest {
    string release = 1;
    string namespace = 2;
}

message GetDeploymentStatusResponse {
    string status = 1;
    string first_deployed = 2;
    string last_deployed = 3;
    string status_description = 4;
}

message ListSupportedTasksRequest {}

message ListSupportedTasksResponse {
    string name = 1;
    string command = 2;
    string repository = 3;
}

service OpsService { 
    rpc ListSupportedDeployments(ListSupportedDeploymentsRequest) returns (ListSupportedDeploymentsResponse) {};
    rpc GetDeploymentStatus(GetDeploymentStatusRequest) returns (GetDeploymentStatusResponse) {};
    rpc ListSupportedTasks(ListSupportedTasksRequest) returns (ListSupportedTasksResponse) {};
}
